--- a/20202webIndex.css
+++ b/20202webIndex.css
@@ -1,26 +1,74 @@
-main {
+body,html {
+  margin: 0;
+}
+header{
     width: 50%;
     margin: 50px auto;
     text-align: center;
+    position: relative;
+    top: 40px;
 }
 
 #Title-Name {
     font-size: 50px;
+    font-weight: bold;
 }
 
-table {
+#Title-Name:hover {
+  transform: scaleX( 1.5 );
+  transition-duration: 1s;
+  display: inline-block;
+  margin: 0;
+}
+
+ main {
+    width: 50%;
     margin: 50px auto;
+    text-align: center;
+    position: relative;
+    top: 40px;
 }
 
-table, th ,td {
-    border-collapse: collapse;
-    border: 1px solid black;
+#drop {
+    background-color: green;
 }
 
-th,td {
-    padding: 5px;
+#drop a {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  padding: 15px;
+  display:inline-block;
 }
 
-th {
+#GameList {
     font-size: 30px;
+    text-decoration: none;
+    color: white;
+    margin: 10px;
+    display: inline-block;
+}
+
+ul {
+  display: inline;
+  margin: 0;
+  padding: 0;
+}
+
+ul li {display: inline-block;}
+ul li:hover {background: #555;}
+ul li:hover ul {display: block;}
+ul li ul {
+  position: absolute;
+  width: 200px;
+  display: none;
+}
+
+ul li ul li { 
+  background: #555; 
+  display: block; 
+}
+
+.list_hover:hover {
+    letter-spacing: 2px;
 }
